test_src/compiler_errors/types/boolean/OrNumberError2.b
class OrNumberError1 {
    void test() {
        println(true || 0.0);
    }
}
